--- a/dz3/templates/servicemonitor.yaml
+++ b/dz3/templates/servicemonitor.yaml
@@ -18,3 +18,24 @@ spec:
       port: web
       path: /metrics
 {{- end }}
+---
+{{- if .Values.metrics.serviceMonitor.enabled }}
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name:  ingress-nginx-controller
+  namespace: ingress-nginx
+spec:
+  endpoints:
+    - interval: 15s
+      port: metrics
+      path: /metrics
+  namespaceSelector:
+    matchNames:
+      - ingress-nginx
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: controller
+      app.kubernetes.io/instance: ingress-nginx
+      app.kubernetes.io/name: ingress-nginx
+{{- end }}
