--- a/dz3/templates/servicemonitor.yaml
+++ b/dz3/templates/servicemonitor.yaml
@@ -21,21 +21,20 @@ spec:
 ---
 {{- if .Values.metrics.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
+kind: PodMonitor
 metadata:
   name:  ingress-nginx-controller
   namespace: ingress-nginx
 spec:
-  endpoints:
+  podMetricsEndpoints:
     - interval: 15s
       port: metrics
       path: /metrics
   namespaceSelector:
     matchNames:
-      - ingress-nginx
+      - "ingress-nginx"
   selector:
     matchLabels:
-      app.kubernetes.io/component: controller
       app.kubernetes.io/instance: ingress-nginx
       app.kubernetes.io/name: ingress-nginx
 {{- end }}
